--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -1,5 +1,20 @@
 .columns-container
   #columns.container
     %h2.page-heading
-      %span.page-heading-title2 Checkout
-    = render 'form'
+      %span.page-heading-title2 Оформление заказа
+    .page-content.checkout-page
+      .row
+        .col-md-9
+          = render 'form'
+        #left_column.column.col-xs-12.col-sm-3
+          / block best sellers
+          .block.left-module
+            %p.title_block
+            .block_content
+              %ul.products-block.best-sell
+                - unless @cart.line_items.empty?
+                  = render partial: 'cart', collection: @cart.line_items, as: :line_item
+              .total-cart
+                %span Итого
+                %span.toal-price.pull-right= number_to_currency(@cart.total_price, precision: 0, locale: :uk)
+              .text-center= link_to 'Редактировать заказ', @cart
