comments implementation for Order

--- a/app/assets/stylesheets/cart.css.scss
+++ b/app/assets/stylesheets/cart.css.scss
@@ -7,3 +7,20 @@
 .table > thead > tr > th {
   text-align: center;
 }
+.page-order .cart_navigation button.next-btn{
+  float: right;
+  background: #FF6633;
+  color: #fff;
+  border: 1px solid #FF6633;
+  padding: 10px 20px;
+}
+
+.page-order .cart_navigation button.next-btn:hover{
+  opacity: 0.8;
+}
+
+.page-order .cart_navigation button.next-btn:after{
+  font: normal normal normal 14px/1 FontAwesome;
+  content: "\f105";
+  padding-left: 15px;
+}
