--- a/app/views/line_items/_cart_line_item.html.haml
+++ b/app/views/line_items/_cart_line_item.html.haml
@@ -27,4 +27,4 @@
   %td.price
     %span= number_to_currency(line_item.total_price, locale: :uk)
   %td.action
-    = link_to 'Delete item', line_item, method: :delete, remote: true
+    = link_to 'Delete item', line_item, method: :delete, data: {toggle: 'tooltip'}, title: 'Убрать товар из корзины', remote: true
