use PostgreSQL array datatype for Product#sizes

--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -134,3 +134,8 @@
 .product-list li .content_price {
   margin: 5px 0 10px;
 }
+
+.related-products .content_price .product-price,
+.related-products .content_price .old-price {
+  font-size: 20px;
+}
