--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,6 +31,14 @@
  *= require_self
  */
 
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
  .main-header .shopping-cart-box a.cart-link .title {
    text-transform: none;
  }
