--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,9 +20,10 @@
 
 
   %body
-    = render 'layouts/flash_messages'
-    = render 'layouts/header'
-    = render 'layouts/navbar'
-    = render 'layouts/breadcrumbs'
-    = yield
+    .content-wrapper
+      = render 'layouts/flash_messages'
+      = render 'layouts/header'
+      = render 'layouts/navbar'
+      = render 'layouts/breadcrumbs'
+      = yield
     = render 'layouts/footer'
