contacts page scaffold

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -30,11 +30,9 @@
                 %li
                   = link_to 'Доставка и оплата', delivery_path
                 %li
-                  = link_to 'Оптом', wholesale_path
+                  = link_to 'Оптовым покупателям', wholesale_path
                 %li
-                  %a{:href => "category.html"} Контакты
-                %li
-                  %a{:href => "category.html"} Задать вопрос
+                  = link_to 'Контакты', contacts_path
       / userinfo on top
       #form-search-opntop
       / userinfo on top
