contacts page with form & footer menu

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -4109,7 +4109,7 @@ span.notify-right{
     padding: 10px 25px;
 }
 #contact #btn-send-contact:hover{
-    background: #F36;
+    background: #FF6633;
 }
 #contact_form_map ul {
   line-height: 28px;
