--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -15,28 +15,28 @@
           .col-sm-6
             .introduce-title Молодежная одежда
             %ul#introduce-Account.introduce-list
-              %li
-                %a{:href => "#"} Мужчинам
-              %li
-                %a{:href => "#"} Женщинам
-              %li
-                %a{:href => "#"} Детям
+              - @categories.each do |category|
+                %li
+                  = link_to category do
+                    = category.name
           .col-sm-6
-            .introduce-title
+            .introduce-title Меню
             %ul#introduce-company.introduce-list
               %li
-                %a{:href => "#"} Главная
+                = link_to 'Главная', root_path
               %li
-                %a{:href => "#"} Доставка и оплата
+                = link_to 'Доставка и оплата', delivery_path
               %li
-                %a{:href => "#"} Оптовым покупателям
+                = link_to 'Распродажа', discount_path
               %li
-                %a{:href => "#"} Задать вопрос
+                = link_to 'Оптовым покупателям', wholesale_path
+              %li
+                = link_to 'Контакты', contacts_path
       .col-md-3
         #contact-box
           .introduce-title Узнай первым о новых поступлениях
           #mail-box.input-group
-            %input{:placeholder => "Your Email Address", :type => "text"}/
+            %input{:placeholder => "Ваш e-mail", :type => "text"}/
             %span.input-group-btn
               %button.btn.btn-default{:type => "button"} OK
           .social-link
