--- a/app/views/pages/contacts.html.haml
+++ b/app/views/pages/contacts.html.haml
@@ -1,58 +1,55 @@
 .columns-container
   #columns.container
-    / breadcrumb
-    .breadcrumb.clearfix
-      %a.home{:href => "#", :title => "Return to Home"} Home
-      %span.navigation-pipe
-      %span.navigation_page Contact
-    / ./breadcrumb
     / page heading
     %h2.page-heading
-      %span.page-heading-title2 Contact Us
+      %span.page-heading-title2
     / ../page heading
     #contact.page-content.page-contact
       #message-box-conact
       .row
         .col-sm-6
-          %h3.page-subheading CONTACT FORM
+          %h3.page-subheading Задайте вопрос
           .contact-form-box
-            .form-selector
-              %label Subject Heading
-              %select#subject.form-control.input-sm
-                %option{:value => "Customer service"} Customer service
-                %option{:value => "Webmaster"} Webmaster
-            .form-selector
-              %label Email address
-              %input#email.form-control.input-sm{:type => "text"}/
-            .form-selector
-              %label Order reference
-              %input#order_reference.form-control.input-sm{:type => "text"}/
-            .form-selector
-              %label Message
-              %textarea#message.form-control.input-sm{:rows => "10"}
-            .form-selector
-              %button#btn-send-contact.btn Send
+            = form_tag '/mail', remote: true do
+              .form-selector
+                = label_tag 'Ваш Email'
+                = text_field_tag 'email', nil, class: 'form-control input-sm', required: true
+              .form-selector
+                = label_tag 'Сообщение'
+                = text_area_tag 'message', nil, class: 'form-control input-sm', size: '5x4', required: true
+              .form-selector
+                = button_tag 'Отправить', class: 'btn', id: 'btn-send-contact'
+                // %button#btn-send-contact.btn Send
+          .alert.alert-success.data-dismissible#message-sent
+            %button.close{"aria-label" => "Close", "data-dismiss" => "alert", :type => "button"}
+              %span{"aria-hidden" => "true"} ×
+            Сообщение отправлено
         #contact_form_map.col-xs-12.col-sm-6
-          %h3.page-subheading Information
-          %p Lorem ipsum dolor sit amet onsectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor dapibus eget. Mauris tincidunt aliquam lectus sed vestibulum. Vestibulum bibendum suscipit mattis.
-          %br/
-          %ul
-            %li Praesent nec tincidunt turpis.
-            %li Aliquam et nisi risus. Cras ut varius ante.
-            %li Ut congue gravida dolor, vitae viverra dolor.
-          %br/
+          %h3.page-subheading Контакты
+          %p
+            Друзья, мы работаем для вас со вторника по воскресенье. Понедельник - выходной.
+            %br
+            Товар отправляем каждый день до 15:00.
+          %br
+          %p
+            Вы всегда сможете получить консультацию по ассортименту наших товаров следующими способами:
+          %br
+          // %ul
+          //   %li Сделав заказ на нашем сайте в любой день недели и в любое время суток
+          //   %li По телефону: 38 (096) 88-69-888
+          //   %li
+          //     Написать на почту:
+          //     %span.text-bold pin-shop@mail.ua
+          // %br/
           %ul.store_info
             %li
               %i.fa.fa-home>
-              Our business address is 1063 Freelon Street San Francisco, CA 95108
+              Сделав заказ на нашем сайте в любой день недели и в любое время суток
             %li
               %i.fa.fa-phone
-              %span + 021.343.7575
+              По телефону:
+              %strong 38 (096) 88-69-888
             %li
-              %i.fa.fa-phone
-              %span + 020.566.6666
-            %li
-              %i.fa.fa-envelope>
-              Email:
-              %span
-                %a{:href => "mailto:%73%75%70%70%6f%72%74@%6b%75%74%65%74%68%65%6d%65.%63%6f%6d"} support@kutetheme.com
+              %i.fa.fa-envelope
+              Написать на почту:
+              %strong pin-shop@mail.ua
