add image file formats to image_tag

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,7 +17,7 @@
     .row
       .col-xs-12.col-sm-3.logo
         = link_to root_url do
-          = image_tag('logo', alt: 'Pinshop - интернет-магазин молодежной одежды')
+          = image_tag('logo.png', alt: 'Pinshop - интернет-магазин молодежной одежды')
       .col-xs-7.col-sm-7.header-search-box
         = form_tag '/search', method: :get, class: 'form-inline' do
           .form-group.form-category
