--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -12,7 +12,7 @@
               - @categories.each do |category|
                 %li
                   = link_to category do
-                    = image_tag('pin-icon', alt: 'pin-icon', class: 'icon-menu')
+                    = image_tag('pin-icon.png', alt: 'pin-icon', class: 'icon-menu')
                     = category.name
       #main-menu.col-sm-9.main-menu
         %nav.navbar.navbar-default
