--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,9 +3,9 @@
     .col-sm-3
     .col-xs-12.col-sm-9.center_column
       #main-page-slider.owl-carousel.owl-theme
-        = image_tag('theme-images/main-slide')
-        = image_tag('theme-images/main-slide')
-        = image_tag('theme-images/main-slide')
+        = image_tag('theme-images/main-slide.jpg')
+        = image_tag('theme-images/main-slide.jpg')
+        = image_tag('theme-images/main-slide.jpg')
 .container
   .service
     .col-xs-12.col-sm-4.service-item
