home page styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,7 @@
  *= require responsive
  *= require categories
  *= require fancybox
+ *= require home
  *= require product
  *= require cart
  *= require orders
