search icon fix

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -790,7 +790,7 @@ img.alignright{
 .main-header .header-search-box .form-inline .btn-search{
     width: 41px;
     height: 41px;
-    background: #FF6633 url("theme-images/search.png") no-repeat center center;
+    background: #FF6633 image-url("theme-images/search.png") no-repeat center center;
     border: none;
     border-radius: 0;
     color: #fff;
