SEO: content for title tag

--- a/app/views/pages/discount.html.haml
+++ b/app/views/pages/discount.html.haml
@@ -1,3 +1,5 @@
+= content_for :title do
+  Товары со скидкой, купить футболки недорого
 .columns-container
   #columns.container
     %h2.page-heading
