--- a/app/views/pages/wholesale.html.haml
+++ b/app/views/pages/wholesale.html.haml
@@ -1,7 +1,9 @@
+= content_for :title do
+  Оптовые покупки
 .columns-container
   #columns.container
     %h2.page-heading
-      %span.page-heading-title2 Оптовые закупки
+      %span.page-heading-title2 Оптовые покупки
     .page-content.wholesale-page
       .panel.panel-info
         .panel-heading
