--- a/app/views/categories/_products_list.html.haml
+++ b/app/views/categories/_products_list.html.haml
@@ -42,6 +42,7 @@
                     Нет в наличии
                 .product-desc
                   = truncate(product.description, length: 180, separator: ' ', escape: false)
-              %strong.product-list-button
-                = link_to 'Подробнее', category_product_path(product.category, product), class: 'btn btn-cart-orange'
+              %strong
+                .product-list-button
+                  = link_to 'Подробнее', category_product_path(product.category, product), class: 'btn btn-cart-orange'
   = paginate @products, :theme => 'twitter-bootstrap-3', remote: true
